<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Headunit</string>
    <string name="app_service_title">Headunit</string>
    <string name="app_service_descr">Microntek HeadUnit service running</string>
    
    <string name="toast_safe_volume">Set safe volume level</string>
    
    <string name="toast_calling_process">Calling: %s</string>
    <string name="toast_calling_error">Calling error: %d</string>
    
    <string name="ui_contact_title">Contact author</string>
    <string name="ui_contact_text">Write email to petro@petro.ws</string>
    
    <string name="ui_service_title">MicronTek HeadUnit Service</string>
    <string name="ui_service_enable">Service enable</string>
    <string name="ui_service_settings">Service advanced settings</string>
    
    <string name="ui_adv_settings_keys_cat">Steering wheel keys to media remap</string>
    <string name="ui_adv_settings_keys_enable_title">Enable media keys</string>
    <string name="ui_adv_settings_keys_enable_text">Make media players work from steering wheel</string>
    <string name="ui_adv_settings_keys_config_title">Configure keys</string>
    <string name="ui_adv_settings_keys_config_text">Configure steering wheel keys</string>
    
    <string name="ui_adv_settings_caller_cat">Call from Android</string>
    <string name="ui_adv_settings_caller_enable_title">Enable call from Android</string>
    <string name="ui_adv_settings_caller_enable_text">Make an bluetooth call from Android app or phonebook request</string>
    <string name="ui_adv_settings_caller_app_title">True Conctacts app</string>
    <string name="ui_adv_settings_caller_app_text">Press to open recommended app for Android contacts and calls</string>
    
    <string name="ui_adv_settings_svol_cat">Safe volume on start</string>
    <string name="ui_adv_settings_svol_enable_title">Set on start</string>
    <string name="ui_adv_settings_svol_enable_text">Apply safe volume on unit start</string>
    <string name="ui_adv_settings_svol_level_title">Apply level</string>
    <string name="ui_adv_settings_svol_level_text">Volume level to set</string>
    
    <string name="ui_adv_settings_toast_cat">Notifications</string>
    <string name="ui_adv_settings_toast_enable_title">Enable toast</string>
    <string name="ui_adv_settings_toast_enable_text">Show short message on all keys and events</string>
    
    <string name="ui_adv_settings_speedvol_cat">Speed volume</string>
    <string name="ui_adv_settings_speedvol_enable_title">Enable speed ajust</string>
    <string name="ui_adv_settings_speedvol_enable_text">Ajust volume depends on vehicle speed</string>
    <string name="ui_adv_settings_speedvol_speed_title">Speed edges</string>
    <string name="ui_adv_settings_speedvol_speed_text">Speed values to up/down volume</string>
    <string name="ui_adv_settings_speedvol_level_title">Change level</string>
    <string name="ui_adv_settings_speedvol_level_text">Volume level value to change on every step</string>
    
    <string name="wdg_history_title">HeadUnit Call History</string>
    <string name="wdg_history_unknown_contact">Unknown</string>
    
</resources>
